fixed sonar comments